Fix table column headers from being squished on mobile

--- a/public/style.css
+++ b/public/style.css
@@ -41,6 +41,7 @@ h2 {
 table {
   width: 100%;
   border-collapse: collapse;
+  min-width: 600px;
 }
 
 .section table {
@@ -55,7 +56,7 @@ table {
 .section table tr {
   display: table;
   width: 100%;
-  table-layout: fixed;
+  table-layout: auto;
 }
 
 thead {
